--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@ body
     background-color: #000000;
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 125%;
+    font-size: x-large;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
     header
@@ -38,15 +41,27 @@ body
 
     main
     {
-        padding: 10px;
-        max-width: 70%;
-        width: fit-content;
+        padding: 2% 10%;
         margin: auto;
+        display: flex;
+        flex-direction: row-reverse;
     }
 
+        #photo
+        {
+            padding: 20px;
+            float: right;
+        }
+
+            #author
+            {
+                width: 100%;
+            }
+    
         #content
         {
             display: flex;
+            flex-direction: column;
         }
 
             #about_me
@@ -73,27 +88,15 @@ body
                         color: #aaaaaa;
                     }
 
-            #photo
-            {
-                width: 30%;
-                padding: 20px;
-            }
-
-                #author
-                {
-                    width: 100%;
-                }
-
     footer
     {
         display: flex;
         justify-content: space-evenly;
-        padding: 2%;
+        align-items: center;
+        padding: 20px;
         background-color: #041510;
-        font-size: 70%;
-        position: fixed;
-        width: 100%;
-        bottom: 0%;
+        font-size: medium;
+        height: 60px;
     }
 
         #mail
@@ -107,3 +110,27 @@ body
             cursor: pointer;
             color: #aaaaaa;
         }
+
+@media (max-width: 768px)
+{
+    body
+    {
+        font-size: large;
+    }
+    
+    main
+    {
+        padding: 1% 5%;
+        flex-direction: column;
+    }
+
+    footer
+    {
+        font-size: small;
+    }
+    
+    footer div
+    {
+        padding: 0% 5%;
+    }
+}
